code refactoring for Java 21; reduce warnings